kuber_dz_1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber-dz-1
spec:
  selector:
    matchLabels:
      app: kuber-dz-1-app
  replicas: 3
  template:
    metadata:
      labels:
        app: kuber-dz-1-app
    spec:
      containers:
      - name: kuber-dz-1
        image: yonesko/microservice-2021-03:kuber_dz_1
        ports:
          - name: web
            containerPort: 8000
