kuber_dz_1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuber-dz-1
spec:
  selector:
    app: kuber-dz-1
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: LoadBalancer
