kuber_dz_1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuber-dz-1
  annotations: 
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: arch.homework
      http: 
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kuber-dz-1
                port:
                  number: 8000
